--- a/playing.ipynb
+++ b/playing.ipynb
@@ -44,6 +44,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from pybaseball import standings\n",
+    "data = standings()\n",
+    "#data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "collapsed": false,
