added Stucka timestamp

--- a/playing.ipynb
+++ b/playing.ipynb
@@ -44,9 +44,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Thursday, April 5, at 5:38 p.m.'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# trying mike stucka's date \n",
+    "def get_big_timestamp(date_object=None):\n",
+    "    import datetime\n",
+    "    if not date_object:\n",
+    "        date_object = datetime.datetime.now()\n",
+    "    stamp = \"\"\n",
+    "    # comment out below if you don't want \"Wednesday\" or similar in your string\n",
+    "    stamp += datetime.datetime.strftime(date_object, \"%A, \")\n",
+    "    if date_object.month == 9:\n",
+    "        stamp += \"Sept. \" +  datetime.datetime.strftime(date_object, \"%d, %Y\").lstrip(\"0\")\n",
+    "    elif date_object.month < 3 or date_object.month > 7:\n",
+    "        stamp += datetime.datetime.strftime(date_object, \"%b. \") + datetime.datetime.strftime(date_object, \"%d\").lstrip(\"0\")\n",
+    "    else:\n",
+    "        stamp += datetime.datetime.strftime(date_object, \"%B \") + datetime.datetime.strftime(date_object, \"%d\").lstrip(\"0\")\n",
+    "    # uncomment out below if you want the year\n",
+    "    # stamp += datetime.datetime.strftime(date_object, \", %Y\")\n",
+    "    stamp += \", at \"\n",
+    "    stamp += datetime.datetime.strftime(date_object, \"%I:%M %p\").lstrip(\"0\").replace(\"AM\", \"a.m.\").replace(\"PM\", \"p.m.\")\n",
+    "    return(stamp)\n",
+    "\n",
+    "timestamp=get_big_timestamp()\n",
+    "timestamp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -511,7 +565,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -520,7 +576,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -529,7 +587,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
