small tweaks, including adding -wo, or walk offs, to win/loss count

--- a/playing2.ipynb
+++ b/playing2.ipynb
@@ -51,6 +51,461 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Tm</th>\n",
+       "      <th>Home_Away</th>\n",
+       "      <th>Opp</th>\n",
+       "      <th>W/L</th>\n",
+       "      <th>R</th>\n",
+       "      <th>RA</th>\n",
+       "      <th>Inn</th>\n",
+       "      <th>W-L</th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>GB</th>\n",
+       "      <th>Win</th>\n",
+       "      <th>Loss</th>\n",
+       "      <th>Save</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>D/N</th>\n",
+       "      <th>Attendance</th>\n",
+       "      <th>Streak</th>\n",
+       "      <th>Orig. Scheduled</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Thursday, Mar 29</td>\n",
+       "      <td>CHC</td>\n",
+       "      <td>@</td>\n",
+       "      <td>MIA</td>\n",
+       "      <td>W</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1-0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Tied</td>\n",
+       "      <td>Cishek</td>\n",
+       "      <td>Urena</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3:18</td>\n",
+       "      <td>D</td>\n",
+       "      <td>32151.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Friday, Mar 30</td>\n",
+       "      <td>CHC</td>\n",
+       "      <td>@</td>\n",
+       "      <td>MIA</td>\n",
+       "      <td>L-wo</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>1-1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Despaigne</td>\n",
+       "      <td>Butler</td>\n",
+       "      <td>None</td>\n",
+       "      <td>5:18</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12034.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Saturday, Mar 31</td>\n",
+       "      <td>CHC</td>\n",
+       "      <td>@</td>\n",
+       "      <td>MIA</td>\n",
+       "      <td>W</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2-1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Strop</td>\n",
+       "      <td>Ziegler</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3:57</td>\n",
+       "      <td>N</td>\n",
+       "      <td>13422.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Sunday, Apr 1</td>\n",
+       "      <td>CHC</td>\n",
+       "      <td>@</td>\n",
+       "      <td>MIA</td>\n",
+       "      <td>L</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2-2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>Peters</td>\n",
+       "      <td>Quintana</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2:36</td>\n",
+       "      <td>D</td>\n",
+       "      <td>10428.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Monday, Apr 2</td>\n",
+       "      <td>CHC</td>\n",
+       "      <td>@</td>\n",
+       "      <td>CIN</td>\n",
+       "      <td>L</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2-3</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>Mahle</td>\n",
+       "      <td>Chatwood</td>\n",
+       "      <td>Iglesias</td>\n",
+       "      <td>2:33</td>\n",
+       "      <td>D</td>\n",
+       "      <td>18963.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Thursday, Apr 5</td>\n",
+       "      <td>CHC</td>\n",
+       "      <td>@</td>\n",
+       "      <td>MIL</td>\n",
+       "      <td>W</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3-3</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Lester</td>\n",
+       "      <td>Suter</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2:52</td>\n",
+       "      <td>N</td>\n",
+       "      <td>24310.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Friday, Apr 6</td>\n",
+       "      <td>CHC</td>\n",
+       "      <td>@</td>\n",
+       "      <td>MIL</td>\n",
+       "      <td>L-wo</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3-4</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Albers</td>\n",
+       "      <td>Montgomery</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3:45</td>\n",
+       "      <td>N</td>\n",
+       "      <td>37758.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Saturday, Apr 7</td>\n",
+       "      <td>CHC</td>\n",
+       "      <td>@</td>\n",
+       "      <td>MIL</td>\n",
+       "      <td>W</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>4-4</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Strop</td>\n",
+       "      <td>Barnes</td>\n",
+       "      <td>Morrow</td>\n",
+       "      <td>3:26</td>\n",
+       "      <td>D</td>\n",
+       "      <td>43331.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Sunday, Apr 8</td>\n",
+       "      <td>CHC</td>\n",
+       "      <td>@</td>\n",
+       "      <td>MIL</td>\n",
+       "      <td>W</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>5-4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Quintana</td>\n",
+       "      <td>Anderson</td>\n",
+       "      <td>Morrow</td>\n",
+       "      <td>2:41</td>\n",
+       "      <td>D</td>\n",
+       "      <td>39282.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Tuesday, Apr 10</td>\n",
+       "      <td>CHC</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>PIT</td>\n",
+       "      <td>L</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>5-5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Nova</td>\n",
+       "      <td>Chatwood</td>\n",
+       "      <td>Vazquez</td>\n",
+       "      <td>3:05</td>\n",
+       "      <td>D</td>\n",
+       "      <td>40144.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Wednesday, Apr 11</td>\n",
+       "      <td>CHC</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>PIT</td>\n",
+       "      <td>W</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>6-5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Duensing</td>\n",
+       "      <td>Glasnow</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2:59</td>\n",
+       "      <td>N</td>\n",
+       "      <td>35596.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Thursday, Apr 12</td>\n",
+       "      <td>CHC</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>PIT</td>\n",
+       "      <td>L</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>6-6</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Williams</td>\n",
+       "      <td>Hendricks</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2:57</td>\n",
+       "      <td>D</td>\n",
+       "      <td>29949.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Friday, Apr 13</td>\n",
+       "      <td>CHC</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>L</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>6-7</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Sanchez</td>\n",
+       "      <td>Darvish</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3:09</td>\n",
+       "      <td>D</td>\n",
+       "      <td>29775.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Saturday, Apr 14</td>\n",
+       "      <td>CHC</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>W</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>7-7</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Wilson</td>\n",
+       "      <td>Ramirez</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3:43</td>\n",
+       "      <td>D</td>\n",
+       "      <td>36788.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Sunday, Apr 15</td>\n",
+       "      <td>CHC</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Date   Tm Home_Away  Opp   W/L     R    RA   Inn   W-L  Rank  \\\n",
+       "1    Thursday, Mar 29  CHC         @  MIA     W   8.0   4.0   9.0   1-0   1.0   \n",
+       "2      Friday, Mar 30  CHC         @  MIA  L-wo   1.0   2.0  17.0   1-1   3.0   \n",
+       "3    Saturday, Mar 31  CHC         @  MIA     W  10.0   6.0  10.0   2-1   2.0   \n",
+       "4       Sunday, Apr 1  CHC         @  MIA     L   0.0   6.0   9.0   2-2   3.0   \n",
+       "5       Monday, Apr 2  CHC         @  CIN     L   0.0   1.0   9.0   2-3   4.0   \n",
+       "6     Thursday, Apr 5  CHC         @  MIL     W   8.0   0.0   9.0   3-3   3.0   \n",
+       "7       Friday, Apr 6  CHC         @  MIL  L-wo   4.0   5.0   9.0   3-4   3.0   \n",
+       "8     Saturday, Apr 7  CHC         @  MIL     W   5.0   2.0   9.0   4-4   3.0   \n",
+       "9       Sunday, Apr 8  CHC         @  MIL     W   3.0   0.0   9.0   5-4   2.0   \n",
+       "10    Tuesday, Apr 10  CHC      Home  PIT     L   5.0   8.0   9.0   5-5   2.0   \n",
+       "11  Wednesday, Apr 11  CHC      Home  PIT     W  13.0   5.0   9.0   6-5   2.0   \n",
+       "12   Thursday, Apr 12  CHC      Home  PIT     L   1.0   6.0   9.0   6-6   3.0   \n",
+       "13     Friday, Apr 13  CHC      Home  ATL     L   0.0   4.0   9.0   6-7   4.0   \n",
+       "14   Saturday, Apr 14  CHC      Home  ATL     W  14.0  10.0   9.0   7-7   4.0   \n",
+       "15     Sunday, Apr 15  CHC      Home  ATL  None   NaN   NaN   NaN  None   NaN   \n",
+       "\n",
+       "      GB        Win        Loss      Save  Time   D/N  Attendance  Streak  \\\n",
+       "1   Tied     Cishek       Urena      None  3:18     D     32151.0     1.0   \n",
+       "2    1.0  Despaigne      Butler      None  5:18     N     12034.0    -1.0   \n",
+       "3    1.0      Strop     Ziegler      None  3:57     N     13422.0     1.0   \n",
+       "4    1.5     Peters    Quintana      None  2:36     D     10428.0    -1.0   \n",
+       "5    2.5      Mahle    Chatwood  Iglesias  2:33     D     18963.0    -2.0   \n",
+       "6    2.0     Lester       Suter      None  2:52     N     24310.0     1.0   \n",
+       "7    3.0     Albers  Montgomery      None  3:45     N     37758.0    -1.0   \n",
+       "8    2.0      Strop      Barnes    Morrow  3:26     D     43331.0     1.0   \n",
+       "9    2.0   Quintana    Anderson    Morrow  2:41     D     39282.0     2.0   \n",
+       "10   3.0       Nova    Chatwood   Vazquez  3:05     D     40144.0    -1.0   \n",
+       "11   2.0   Duensing     Glasnow      None  2:59     N     35596.0     1.0   \n",
+       "12   3.0   Williams   Hendricks      None  2:57     D     29949.0    -1.0   \n",
+       "13   3.0    Sanchez     Darvish      None  3:09     D     29775.0    -2.0   \n",
+       "14   3.0     Wilson     Ramirez      None  3:43     D     36788.0     1.0   \n",
+       "15  None       None        None      None  None  None         NaN     NaN   \n",
+       "\n",
+       "   Orig. Scheduled  \n",
+       "1             None  \n",
+       "2             None  \n",
+       "3             None  \n",
+       "4             None  \n",
+       "5             None  \n",
+       "6             None  \n",
+       "7             None  \n",
+       "8             None  \n",
+       "9             None  \n",
+       "10            None  \n",
+       "11            None  \n",
+       "12            None  \n",
+       "13            None  \n",
+       "14            None  \n",
+       "15            None  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cubs.head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": true,
@@ -208,7 +663,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
