added batting stats

--- a/playing2.ipynb
+++ b/playing2.ipynb
@@ -22,9 +22,519 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from pybaseball import schedule_and_record\n",
+    "from pybaseball import schedule_and_record, batting_stats\n",
     "print('ready')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "data = batting_stats(2018)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>AB</th>\n",
+       "      <th>R</th>\n",
+       "      <th>H</th>\n",
+       "      <th>dbls</th>\n",
+       "      <th>trps</th>\n",
+       "      <th>HR</th>\n",
+       "      <th>RBI</th>\n",
+       "      <th>BB</th>\n",
+       "      <th>SO</th>\n",
+       "      <th>...</th>\n",
+       "      <th>AVG</th>\n",
+       "      <th>OBP</th>\n",
+       "      <th>SLG</th>\n",
+       "      <th>wOBA</th>\n",
+       "      <th>wRAA</th>\n",
+       "      <th>RAR</th>\n",
+       "      <th>WAR</th>\n",
+       "      <th>Fld</th>\n",
+       "      <th>SOperc</th>\n",
+       "      <th>last</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>134</th>\n",
+       "      <td>Tim Anderson</td>\n",
+       "      <td>45</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>16</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.267</td>\n",
+       "      <td>0.327</td>\n",
+       "      <td>0.489</td>\n",
+       "      <td>0.356</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>-0.7</td>\n",
+       "      <td>35.6</td>\n",
+       "      <td>Anderson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>Matt Davidson</td>\n",
+       "      <td>38</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>16</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.211</td>\n",
+       "      <td>0.375</td>\n",
+       "      <td>0.632</td>\n",
+       "      <td>0.427</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>42.1</td>\n",
+       "      <td>Davidson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135</th>\n",
+       "      <td>Yolmer Sanchez</td>\n",
+       "      <td>38</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.289</td>\n",
+       "      <td>0.341</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>0.356</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>23.7</td>\n",
+       "      <td>Sanchez</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>280</th>\n",
+       "      <td>Yoan Moncada</td>\n",
+       "      <td>49</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>24</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.184</td>\n",
+       "      <td>0.298</td>\n",
+       "      <td>0.306</td>\n",
+       "      <td>0.279</td>\n",
+       "      <td>-1.5</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>Moncada</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>Leury Garcia</td>\n",
+       "      <td>18</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.278</td>\n",
+       "      <td>0.381</td>\n",
+       "      <td>0.333</td>\n",
+       "      <td>0.332</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>22.2</td>\n",
+       "      <td>Garcia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117</th>\n",
+       "      <td>Nick Delmonico</td>\n",
+       "      <td>32</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.281</td>\n",
+       "      <td>0.410</td>\n",
+       "      <td>0.406</td>\n",
+       "      <td>0.371</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>-1.2</td>\n",
+       "      <td>28.1</td>\n",
+       "      <td>Delmonico</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>131</th>\n",
+       "      <td>Jose Abreu</td>\n",
+       "      <td>48</td>\n",
+       "      <td>6</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.250</td>\n",
+       "      <td>0.333</td>\n",
+       "      <td>0.479</td>\n",
+       "      <td>0.358</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>18.8</td>\n",
+       "      <td>Abreu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>293</th>\n",
+       "      <td>Tyler Saladino</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.250</td>\n",
+       "      <td>0.250</td>\n",
+       "      <td>0.375</td>\n",
+       "      <td>0.270</td>\n",
+       "      <td>-0.3</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>37.5</td>\n",
+       "      <td>Saladino</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181</th>\n",
+       "      <td>Welington Castillo</td>\n",
+       "      <td>28</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.214</td>\n",
+       "      <td>0.267</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>0.330</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Castillo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262</th>\n",
+       "      <td>Omar Narvaez</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.188</td>\n",
+       "      <td>0.316</td>\n",
+       "      <td>0.313</td>\n",
+       "      <td>0.290</td>\n",
+       "      <td>-0.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>18.8</td>\n",
+       "      <td>Narvaez</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>279</th>\n",
+       "      <td>Avisail Garcia</td>\n",
+       "      <td>52</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.250</td>\n",
+       "      <td>0.273</td>\n",
+       "      <td>0.365</td>\n",
+       "      <td>0.280</td>\n",
+       "      <td>-1.4</td>\n",
+       "      <td>-2.7</td>\n",
+       "      <td>-0.3</td>\n",
+       "      <td>-1.3</td>\n",
+       "      <td>23.1</td>\n",
+       "      <td>Garcia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>353</th>\n",
+       "      <td>Adam Engel</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>11</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.138</td>\n",
+       "      <td>0.278</td>\n",
+       "      <td>0.172</td>\n",
+       "      <td>0.226</td>\n",
+       "      <td>-2.4</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>-0.3</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>37.9</td>\n",
+       "      <td>Engel</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Name  AB   R   H  dbls  trps  HR  RBI  BB  SO    ...      \\\n",
+       "134        Tim Anderson  45   8  12     1     0   3    4   4  16    ...       \n",
+       "58        Matt Davidson  38  10   8     1     0   5   10   9  16    ...       \n",
+       "135      Yolmer Sanchez  38   3  11     1     2   1    9   2   9    ...       \n",
+       "280        Yoan Moncada  49   6   9     3     0   1    3   8  24    ...       \n",
+       "176        Leury Garcia  18   3   5     1     0   0    2   1   4    ...       \n",
+       "117      Nick Delmonico  32   3   9     1     0   1    3   6   9    ...       \n",
+       "131          Jose Abreu  48   6  12     2     0   3    6   2   9    ...       \n",
+       "293      Tyler Saladino   8   1   2     1     0   0    0   0   3    ...       \n",
+       "181  Welington Castillo  28   3   6     2     0   2    4   2   7    ...       \n",
+       "262        Omar Narvaez  16   0   3     2     0   0    1   3   3    ...       \n",
+       "279      Avisail Garcia  52   5  13     3     0   1    3   0  12    ...       \n",
+       "353          Adam Engel  29   0   4     1     0   0    3   5  11    ...       \n",
+       "\n",
+       "       AVG    OBP    SLG   wOBA  wRAA  RAR  WAR  Fld  SOperc       last  \n",
+       "134  0.267  0.327  0.489  0.356   1.7  4.9  0.5 -0.7    35.6   Anderson  \n",
+       "58   0.211  0.375  0.632  0.427   4.3  4.1  0.4  NaN    42.1   Davidson  \n",
+       "135  0.289  0.341  0.500  0.356   1.5  4.0  0.4  1.5    23.7    Sanchez  \n",
+       "280  0.184  0.298  0.306  0.279  -1.5  3.1  0.3  1.1    49.0    Moncada  \n",
+       "176  0.278  0.381  0.333  0.332   0.3  2.2  0.2  0.9    22.2     Garcia  \n",
+       "117  0.281  0.410  0.406  0.371   1.8  1.0  0.1 -1.2    28.1  Delmonico  \n",
+       "131  0.250  0.333  0.479  0.358   2.0  1.1  0.1 -0.5    18.8      Abreu  \n",
+       "293  0.250  0.250  0.375  0.270  -0.3  0.7  0.1  0.8    37.5   Saladino  \n",
+       "181  0.214  0.267  0.500  0.330   0.4  0.1  0.0 -1.0    25.0   Castillo  \n",
+       "262  0.188  0.316  0.313  0.290  -0.3  0.2  0.0  0.0    18.8    Narvaez  \n",
+       "279  0.250  0.273  0.365  0.280  -1.4 -2.7 -0.3 -1.3    23.1     Garcia  \n",
+       "353  0.138  0.278  0.172  0.226  -2.4 -3.0 -0.3 -2.0    37.9      Engel  \n",
+       "\n",
+       "[12 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soxBS = pd.DataFrame( data.loc[ ( data[\"Team\"] == \"White Sox\") ] )\n",
+    "soxBSselect = soxBS[['Name','AB','R','H','2B','3B','HR','RBI','BB','SO','SB','CS','AVG','OBP','SLG','wOBA','wRAA','RAR','WAR','Fld']]\n",
+    "soxBSselect = soxBSselect.copy()\n",
+    "soxBSselect.loc[:,'SOperc'] = np.round( (soxBSselect['SO'] / soxBSselect['AB'] )*100,1 )\n",
+    "soxBSselect['last'] = soxBSselect['Name'].str.split(' ').str[1]\n",
+    "soxBSselect.loc[:, 'AB'] = soxBSselect['AB'].astype(int)\n",
+    "soxBSselect.loc[:, 'R'] = soxBSselect['R'].astype(int)\n",
+    "soxBSselect.loc[:, 'H'] = soxBSselect['H'].astype(int)\n",
+    "soxBSselect.loc[:, '2B'] = soxBSselect['2B'].astype(int)\n",
+    "soxBSselect.loc[:, '3B'] = soxBSselect['3B'].astype(int)\n",
+    "soxBSselect.loc[:, 'HR'] = soxBSselect['HR'].astype(int)\n",
+    "soxBSselect.loc[:, 'RBI'] = soxBSselect['RBI'].astype(int)\n",
+    "soxBSselect.loc[:, 'BB'] = soxBSselect['BB'].astype(int)\n",
+    "soxBSselect.loc[:, 'SO'] = soxBSselect['SO'].astype(int)\n",
+    "soxBSselect.loc[:, 'CS'] = soxBSselect['CS'].astype(int)\n",
+    "soxBSselect = soxBSselect.rename(columns = {'2B':'dbls','3B':'trps' })\n",
+    "soxBSselect.to_csv(\"csv/soxhit.csv\", index=False, encoding=\"utf-8\")\n",
+    "print(\"Sox batting stats done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name       object\n",
+       "AB         object\n",
+       "R         float64\n",
+       "H         float64\n",
+       "2B        float64\n",
+       "3B        float64\n",
+       "HR        float64\n",
+       "RBI       float64\n",
+       "BB        float64\n",
+       "SO        float64\n",
+       "SB        float64\n",
+       "CS        float64\n",
+       "AVG       float64\n",
+       "OBP       float64\n",
+       "SLG       float64\n",
+       "wOBA      float64\n",
+       "wRAA      float64\n",
+       "RAR       float64\n",
+       "WAR       float64\n",
+       "Fld       float64\n",
+       "SOperc    float64\n",
+       "last       object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soxBSselect.loc[:, 'AB'] = soxBSselect['AB'].astype(int).astype(str)\n",
+    "\n",
+    "soxBSselect.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12, 27)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -53,7 +563,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -499,7 +1011,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
